// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AppView When view key is VK_ADD_NEW_REPO should render a vie with an AddRepo component 1`] = `
<div>
  <Connect(AddRepoContainer) />
</div>
`;

exports[`AppView When view key is VK_JOB_STATUS should render a view with a status component 1`] = `
<div>
  <Connect(StatusContainer)
    repos={Object {}}
  />
</div>
`;

exports[`AppView should render a default view 1`] = `<div />`;
